fixed z-index bug in gallery tutorial

--- a/stylesheets/gallery.css
+++ b/stylesheets/gallery.css
@@ -122,7 +122,7 @@
     transform: translate(-50%, -50%);
 }
 .revealed-button {
-    x-index: 31;
+    z-index: 31;
 }
 .current-button {
     background-color: var(--current-button-color);
@@ -384,9 +384,6 @@
         height: 30px;
         margin: 10px;
     }
-    .modal-x:hover {
-        background-color: lightcoral;
-    }
     #control-holder {
         font-size: 8pt;
     }
@@ -457,6 +454,9 @@
     .small-landscape:hover {
         width: var(--sml-land-h);
         height: auto;
+    }
+    .modal-x:hover {
+        background-color: lightcoral;
     }
 }
 @media screen and (max-height: 500px) {
